--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@types/mongoose": "^5.11.97",
     "axios": "^1.7.9",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.468.0",
     "mongodb": "^6.11.0",
     "mongoose": "^8.8.4",
