--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && NEXT_JS_NO_TYPECHECK=1 next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -18,7 +18,7 @@
     "lucide-react": "^0.468.0",
     "mongodb": "^6.11.0",
     "mongoose": "^8.8.4",
-    "next": "15.0.4",
+    "next": "^15.1.0",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
