--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,18 +3,22 @@
     "noUnusedLocals": false,  
     "noUnusedParameters": false, 
     "noImplicitAny": false,
+    "noEmitOnError": false,
+
     "target": "ES2017",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
-    "strict": true,
-    "noEmit": true,
+    "strict": false,
+    "strictNullChecks": true,
+    "noEmit": false,
     "esModuleInterop": true,
     "module": "esnext",
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
+    
     "incremental": true,
     "plugins": [
       {
